
-> see bottom of this document


MIDIboxSEQ V4.059
~~~~~~~~~~~~~~~~~

   o added Euclidean Rhythm Generator for drum and synth sequences.
     The page can be entered by pressing&holding SELECT in the edit menu -> GP16

   o fixed stack overflow which happened when incoming OSC messages were forwarded
     to OSC in Live mode (they are now automatically filtered to avoid feedback loops)


MIDIboxSEQ V4.058
~~~~~~~~~~~~~~~~~

   o a new Pattern Remix feature has been implemented by Midilab.

     It's optimized for live sessions and got a special page:
        - pattern names can be previewed before they are selected
        - patterns change when the selection button is pressed a second time
        - mixer maps are dumped with pattern change
        - the "Remix" function allows to select tracks which should be kept
          (not overwritten by pattern changes)
        - allows to synchronize with Ableton Live clips

     The full documentation can be found under:
     http://svnmios.midibox.org/filedetails.php?repname=svn.mios32&path=%2Ftrunk%2Fapps%2Fsequencers%2Fmidibox_seq_v4%2Fdoc%2Fpattern_remix_manual.txt

     Note that the correct function of this feature requires, that the remix page
     is assigned to a dedicated button. This has to be done in the MBSEQ_HW.V4 file
     (new entry: BUTTON_PATTERN_RMX) - e.g. you could assign it to F4

   o corrected SysEx output for LPC17


MIDIboxSEQ V4.057
~~~~~~~~~~~~~~~~~

   o improved MIDI OUT throughput for LPC17


MIDIboxSEQ V4.056
~~~~~~~~~~~~~~~~~

   o pattern page: the ALL button now allows to change all patterns 
     to the same number at once (banks won't be influenced by ALL button).
     
   o the ALL function will always be turned off when changing to another page.
   
   o song page: the previously "Stop" action has been renamed to "End" - it doesn't
     stop the sequencer anymore, instead it only exits song mode and loops the